--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@craco/craco": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.0",
+    "material-ui-icons": "^1.0.0-beta.36",
     "mdb-react-ui-kit": "^1.3.0",
     "mdbreact": "^5.1.0",
     "react": "^17.0.2",
