--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
   "cSpell.ignoreWords": ["chefchaouen"],
-  "cSpell.words": ["caro", "pic"]
+  "cSpell.words": [
+    "caro",
+    "pic",
+    "Talassemtane"
+  ]
 }
