--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,4 @@
 {
   "cSpell.ignoreWords": ["chefchaouen"],
-  "cSpell.words": [
-    "caro",
-    "pic",
-    "Talassemtane"
-  ]
+  "cSpell.words": ["caro", "pic", "scro", "Talassemtane"]
 }
