--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.5",
-    "reactstrap": "^8.10.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
+    "reactstrap": "^8.10.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
