--- a/package.json
+++ b/package.json
@@ -4,29 +4,38 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.4",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@here/maps-api-for-javascript": "^1.30.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.0.0",
+    "@mui/material": "^5.0.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.0",
+    "core-js": "^3.18.3",
     "eos-icons-react": "^2.1.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "mdb-react-ui-kit": "^1.3.0",
     "mdbreact": "^5.1.0",
     "prettier": "^2.3.2",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^17.0.2",
     "react-emojione": "^5.0.1",
     "react-fontawesome": "^1.7.1",
+    "react-here-map": "^4.0.0-0",
+    "react-here-maps": "^0.4.0",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
     "reactstrap": "^8.10.0",
+    "simple-element-resize-detector": "^1.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
